--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
     <meta charset="UTF-8">
-		<title>My first Three.js app</title>
+		<title>Ant Non Photorealistic Rendering</title>
         <!-- FONTS -->
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style/style.css"/>
